# book-of-marks

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Main.hs  README.md  SECURITY.md  bookmarks.cabal  cabal.config  stack.yaml
.github/workflows/: ci-stack.yaml  demo.yml  presubmit-cabal.yaml  presubmit-stack.yaml  release.yaml  scorecards.yaml  static-checks.yaml
executables/bookmarks-cli/: Main.hs
src/: Lib.hs  Main.hs
src-benchmark/: Main.hs
src-exe/: Main.hs
src-test/: Main.hs
src/BookmarkManager/: Types.hs
test/: test.hs
test/lib/: Main.hs  Test.hs
test/lib/doctest/: Main.hs
