name:                bookmarks
version:             0.1.0.0
synopsis:            A small bookmark manager application
description:         Manager for the tons of bookmarks that I use. Will use a
                     database for them and a simple GUI/command line interface
                     to interact with those.

license:             ISC
license-file:        LICENSE
author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com
copyright:           © 2016 Mihai Maruseac
homepage:            http://github.com/mihaimaruseac/bookmarks
bug-reports:         http://github.com/mihaimaruseac/bookmarks/issues

category:            Web
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: git@github.com:mihaimaruseac/book-of-marks.git

library
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   BookmarkManager.Types
  build-depends:     base >= 4.8 && < 5
                   , text >= 1.2

executable bookmarks-exe
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , bookmarks

test-suite bookmarks-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , bookmarks

test-suite bookmarks-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >= 0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , bookmarks

benchmark bookmarks-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , bookmarks
