cabal-version:       3.6
name:                bookmarks
version:             0.1.0.0
synopsis:            A small bookmark manager application
description:         Manager for the tons of bookmarks that I use. Will use a
                     database for them and a simple GUI/command line interface
                     to interact with those.

license:             ISC
license-file:        LICENSE

author:              Mihai Maruseac
maintainer:          mihai.maruseac@gmail.com
copyright:           © 2016 Mihai Maruseac
homepage:            http://github.com/mihaimaruseac/bookmarks
bug-reports:         http://github.com/mihaimaruseac/bookmarks/issues

category:            Web
build-type:          Simple
stability:           alpha (experimental)

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: git@github.com:mihaimaruseac/book-of-marks.git

common compile-options
  ghc-options: -Wall -Wcompat
  default-language:  Haskell2010

common compile-options-binaries
  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010

library
  import:            compile-options
  hs-source-dirs:    src
  exposed-modules:   BookmarkManager.Types
  build-depends:     base >= 4.8 && < 5
                   , text >= 1.2

executable bookmarks-exe
  import:            compile-options-binaries
  hs-source-dirs:    src-exe
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , bookmarks

test-suite bookmarks-test
  import:            compile-options-binaries
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src-test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , bookmarks

test-suite bookmarks-doctest
  import:            compile-options-binaries
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src-doctest
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >= 0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , bookmarks

benchmark bookmarks-benchmark
  import:            compile-options-binaries
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src-benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , bookmarks
